Done with authentication

--- a/Xtra-Blog/appsettings.json
+++ b/Xtra-Blog/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "server=.;database=XtraBlogDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  },
+  "EmailSettings": {
+    "SenderName": "Your Name",
+    "SenderEmail": "your-email@example.com",
+    "Server": "smtp.example.com",
+    "Port": "587",
+    "UseSsl": "true",
+    "Username": "your-smtp-username",
+    "Password": "your-smtp-password"
   }
 }
